1998-09-14  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 8.18 was released.

	* Makefile (install-package): Don't depend on target `elc'.

	* APEL-MK (install-apel-package): Compile emu-modules and
	apel-modules.

1998-09-13  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* Makefile: Abolish target `package'.
	(install-package): Use `elc' instead of `package'.

	* APEL-MK: Abolish function `compile-apel-package'.
	(install-apel-package): Update auto-autoloads.el and
	custom-load.el at target directory.

1998-09-13  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* README.en (run in expanded place): fixed.
	(install as a XEmacs package): New description.

	* Makefile (XEMACS): New variable.
	(PACKAGEDIR): New variable.
	(package): New target.
	(install-package): New target.

	* APEL-MK (config-apel-package): New function.
	(compile-apel-package): New function.
	(install-apel-package): New function.

	* APEL-CFG (PACKAGEDIR): New variable.

1998-09-07  Tanaka Akira  <akr@jaist.ac.jp>

        * Makefile (elc): Ignore errors when removing emu*.elc.

1998-09-01  Tanaka Akira <akr@jaist.ac.jp>

	* emu-mule.el (ccl-execute-on-string): Fix arguments
	order `status' and `string'.


1998-08-31  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 8.17 was released.

	* emu.el (with-temp-file): Must use old forms.

1998-08-31  Katsumi Yamoaka   <yamaoka@jpl.org>

	* emu.el (with-temp-file): New macro (Emacs 20/XEmacs 20
	emulating macro).

1998-08-29  Tanaka Akira  <akr@jaist.ac.jp>

        * emu-e20.el: require 'ccl only for byte-compile time.

1998-08-29  Tanaka Akira  <akr@jaist.ac.jp>

        * Makefile (elc): Remove emu*.elc to use newest emu by
        intall.el.

1998-08-29  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* emu-e20.el (ccl-execute-on-string): Too few args.
	(test-ccl-eof-block-cs): Revert existence checking.
	
	* emu-e20_2.el (insert-file-contents-as-binary): Return value.
	(insert-file-contents-as-raw-text): Ditto.
	